# py3dtiles

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  HOW_TO_MAINTAIN.md  HOW_TO_RELEASE.md  LICENSE  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  shell.nix  sonar-project.properties
.gitlab/issue_templates/: default.md
docker/: Dockerfile  README.md  requirements.txt
docs/: README.md  api.rst  conf.py  faq.md  index.rst  install.rst
docs/_templates/: layout.html
docs/api/: py3dtiles.reader.rst  py3dtiles.rst  py3dtiles.tilers.b3dm.rst  py3dtiles.tilers.node.rst  py3dtiles.tilers.pnts.rst  py3dtiles.tilers.rst  py3dtiles.tileset.content.rst  py3dtiles.tileset.extension.rst  py3dtiles.tileset.rst
nix/: README.md
py3dtiles/: __init__.py  command_line.py  constants.py  convert.py  exceptions.py  export.py  info.py  merger.py  typing.py  utils.py
py3dtiles/points/: node.py
py3dtiles/reader/: __init__.py  las_reader.py  ply_reader.py  xyz_reader.py
py3dtiles/tilers/: __init__.py
py3dtiles/tilers/b3dm/: wkb_utils.py
py3dtiles/tilers/base_tiler/: __init__.py  message_type.py  shared_metadata.py  tiler.py  tiler_worker.py
py3dtiles/tilers/node/: distance.py  node.py  node_process.py  points_grid.py  shared_node_store.py
py3dtiles/tilers/pnts/: pnts_writer.py
py3dtiles/tilers/point/: point_message_type.py  point_shared_metadata.py  point_state.py  point_tiler.py  point_tiler_worker.py
py3dtiles/tilers/point/node/: node.py  node_catalog.py  node_process.py  points_grid.py  shared_node_store.py
py3dtiles/tilers/point/pnts/: pnts_writer.py
py3dtiles/tileset/: __init__.py  bounding_volume.py  bounding_volume_box.py  feature_table.py  root_property.py  tile.py  tileset.py  utils.py
py3dtiles/tileset/content/: __init__.py  b3dm.py  b3dm_feature_table.py  batch_table.py  feature_table.py  gltf.py  gltf_utils.py  pnts.py  pnts_feature_table.py  tile_content.py  tile_content_reader.py
py3dtiles/tileset/extension/: __init__.py  base_extension.py  batch_table_hierarchy_extension.py
tests/: conftest.py  test_b3dm.py  test_batch_table.py  test_batch_table_hierachy_extension.py  test_bounding_volume_box.py  test_code_examples.py  test_convert.py  test_export.py  test_extension.py  test_gltf_utils.py  test_merger.py  test_pnts.py  test_points.py  test_reader.py  test_shared_node_store.py  test_tile.py  test_tileset.py  test_utils.py  test_wkb_utils.py
tests/fixtures/: buildings.b3dm  easting_northing_ordering_2326.xyz  northing_easting_ordering_2326.xyz  ply_creation.py  simple_with_classification_and_intensity.ply  simple_with_classification_and_intensity_f4.ply  simple_with_intensity.ply  simple_with_irgb.xyz  simple_with_irgb_and_classification.csv  square_ewkb.wkb  tile_with_extension.b3dm  tileset_with_extension.json
tests/tilers/point/node/: test_node.py
