[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py3dtiles"
authors = [
    {name = "The Py3DTiles team", email = "contact@oslandia.com"},
]
description = "Python module for 3D tiles format"
readme = "README.rst"
license = {text = "Apache-2.0"}

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]

requires-python = ">=3.8,<3.12"

dependencies = [
    "cython",
    "earcut==1.1.5",
    "lz4",
    "numba",
    "numpy>=1.24.0,<2.0.0",
    "psutil",
    "pyproj",
    "pyzmq",
    "pygltflib",
]

[project.urls]
Homepage = "https://py3dtiles.org"
Documentation = "https://py3dtiles.org"
Repository = "https://gitlab.com/py3dtiles/py3dtiles"
Issues = "https://gitlab.com/py3dtiles/py3dtiles/-/issues"
Changelog = "https://gitlab.com/py3dtiles/py3dtiles/-/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["py3dtiles*"]

[tool.setuptools.dynamic]
version = {attr = "py3dtiles.__version__"}

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
las = ["laspy>=2.0,<3.0"]
ply = ["plyfile"]

dev = [
    "line_profiler",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "mypy",
    "typing_extensions",
    "types_psutil",
    "types_psycopg2",
]

doc = [
    "sphinx",
    "sphinx-multiversion",
    "sphinxcontrib-apidoc",
    "sphinx_rtd_theme",
    "myst-parser",
]

pack = [
    "commitizen",
    "build",
    "twine",
    "wheel",
]

[project.scripts]
py3dtiles = "py3dtiles.command_line:main"
